feat : add feature  transaction and history
